Factor annotated types into a wrapper